# yew-beyond-hello-world

./: Cargo.toml  README.md  index.html  style.css  yew-video-streaming.drawio
src/: agent.rs  main.rs  msg_ctx.rs
