[package]
name = "yew-video-streaming"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = "^0.19"
yew-agent = "^0.1.0"
js-sys = "0.3"
wasm-bindgen-shared = "0.2.80"
wasm-bindgen = "0.2.80"
wasm-bindgen-futures = "0.4.30"
serde = "1"
gloo-worker = "0.1"

[dependencies.web-sys]
version = "0.3.57"
features = [
	"Navigator", 
	"MediaDevices", 
	"console", 
	"Document", 
	"MediaStreamConstraints",
	"MediaStreamTrack",
	"MediaStreamTrackProcessor", 
	"MediaStreamTrackProcessorInit",
	"HtmlVideoElement", 
	"HtmlMediaElement", 
	"MediaStream",
	"VideoEncoder",
	"VideoEncoderInit",
	"VideoTrack",
	"ReadableStream",
	"ReadableStreamGetReaderOptions",
	"ReadableStreamDefaultReader"
]

[patch.crates-io]
web-sys = { path = "../wasm-bindgen/crates/web-sys"}
js-sys = { path = "../wasm-bindgen/crates/js-sys"}
wasm-bindgen = { path = "../wasm-bindgen"}
wasm-bindgen-shared = { path = "../wasm-bindgen/crates/shared"}
wasm-bindgen-futures = { path = "../wasm-bindgen/crates/futures"}