[package]
name = "yew-video-streaming"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = "^0.19"
yew-agent = "^0.1.0"
js-sys = "0.3"
wasm-bindgen-shared = "0.2.80"
wasm-bindgen = { version="0.2.80", features = ["serde-serialize"] }
wasm-bindgen-futures = "0.4.30"
serde = { version = "1", features = ["derive"]}
gloo-worker = "0.1"
gloo-timers = "0.2.4"

[dependencies.web-sys]
version = "0.3.57"
features = [
	"Navigator", 
	"MediaDevices", 
	"CanvasRenderingContext2d",
	"console", 
	"Document", 
	"EncodedVideoChunk",	
	"EncodedVideoChunkInit",
	"EncodedVideoChunkType",
	"EncodedVideoChunkMetadata",
	"HtmlCanvasElement",
	"HtmlImageElement",
	"MediaStreamConstraints",
	"MediaStreamTrack",
	"MediaStreamTrackProcessor", 
	"MediaStreamTrackProcessorInit",
	"HtmlVideoElement", 
	"HtmlMediaElement", 
	"MediaStream",
	"VideoDecoder",	
	"VideoDecoderConfig",
	"VideoDecoderInit",
	"VideoDecoderSupport",
	"VideoEncoder",
	"VideoEncoderInit",
	"VideoTrack",
	"VideoFrame",
	"VideoEncoderConfig",
	"ReadableStream",
	"ReadableStreamGetReaderOptions",
	"ReadableStreamDefaultReader"
]

[patch.crates-io]
web-sys = { path = "../wasm-bindgen/crates/web-sys"}
js-sys = { path = "../wasm-bindgen/crates/js-sys"}
wasm-bindgen = { path = "../wasm-bindgen"}
wasm-bindgen-shared = { path = "../wasm-bindgen/crates/shared"}
wasm-bindgen-futures = { path = "../wasm-bindgen/crates/futures"}